--- a/fl5/js/test/examples/plugins.html
+++ b/fl5/js/test/examples/plugins.html
@@ -14,83 +14,154 @@
         <p>
             This test the various configuration options for plugins. Video should play natively on FF, Chrome, Safari, and Opera but will fail in IE.
         </p>
-		<h2>
-			HD (CDN, no version)
-		</h2>
-		<div height="270" id="player1" width="480">
-        </div>
+        <table id="examplestable">
+        </table>
         <script type="text/javascript">
-            jwplayer("player1").setup({
-            	players: settings.players(window.location.href),
-            	levels: [{
-            		file: "http://content.bitsontherun.com/videos/gSzpo2wh-486405.mp4"
-            	}, {
-            		file: "http://content.bitsontherun.com/videos/gSzpo2wh-604476.ogv"
-            	}],
-            	image: "http://content.bitsontherun.com/thumbs/gSzpo2wh-480.jpg",
-				plugins: {
-					hd: {
-						file: "http://content.bitsontherun.com/videos/gSzpo2wh-486405.mp4"
-					}
-				},
-				components: {
-					controlbar: {
-						position: "over"
-					}
-				}
-            });
-        </script>
-		<h2>
-			HD (with version)
-		</h2>
-		<div height="270" id="player2" width="480">
-        </div>
-        <script type="text/javascript">
-            jwplayer("player2").setup({
-            	players: settings.players(window.location.href),
-            	levels: [{
-            		file: "http://content.bitsontherun.com/videos/gSzpo2wh-486405.mp4"
-            	}, {
-            		file: "http://content.bitsontherun.com/videos/gSzpo2wh-604476.ogv"
-            	}],
-            	image: "http://content.bitsontherun.com/thumbs/gSzpo2wh-480.jpg",
-				plugins: {
-					"hd-1": {
-						file: "http://content.bitsontherun.com/videos/gSzpo2wh-486405.mp4"
-					}
-				},
-				components: {
-					controlbar: {
-						position: "over"
-					}
-				}
-            });
-        </script>
-				<h2>
-			HD (with version and path)
-		</h2>
-		<div height="270" id="player3" width="480">
-        </div>
-        <script type="text/javascript">
-            jwplayer("player3").setup({
-            	players: settings.players(window.location.href),
-            	levels: [{
-            		file: "http://content.bitsontherun.com/videos/gSzpo2wh-486405.mp4"
-            	}, {
-            		file: "http://content.bitsontherun.com/videos/gSzpo2wh-604476.ogv"
-            	}],
-            	image: "http://content.bitsontherun.com/thumbs/gSzpo2wh-480.jpg",
-				plugins: {
-					"http://plugins.longtailvideo.com/5/hd/hd-1.swf": {
-						file: "http://content.bitsontherun.com/videos/gSzpo2wh-486405.mp4"
-					}
-				},
-				components: {
-					controlbar: {
-						position: "over"
-					}
-				}
-            });
+            var examplestable = document.getElementById("examplestable");
+            var players = [["flash", "html5", "download"], ["html5", "flash", "download"]];
+            var tests = [{
+            	name: "HD (CDN, no version)",
+            	config: {
+            		levels: [{
+            			file: "http://content.bitsontherun.com/videos/gSzpo2wh-486405.mp4"
+            		}, {
+            			file: "http://content.bitsontherun.com/videos/gSzpo2wh-604476.ogv"
+            		}],
+            		image: "http://content.bitsontherun.com/thumbs/gSzpo2wh-480.jpg",
+            		plugins: "hd",
+					"hd.file": "http://content.bitsontherun.com/videos/gSzpo2wh-486405.mp4",
+            		components: {
+            			controlbar: {
+            				position: "top"
+            			}
+            		}
+            	}
+            }, {
+            	name: "HD (with version)",
+            	config: {
+            		levels: [{
+            			file: "http://content.bitsontherun.com/videos/gSzpo2wh-486405.mp4"
+            		}, {
+            			file: "http://content.bitsontherun.com/videos/gSzpo2wh-604476.ogv"
+            		}],
+            		image: "http://content.bitsontherun.com/thumbs/gSzpo2wh-480.jpg",
+            		plugins: "hd-1",
+            		"hd.file": "http://content.bitsontherun.com/videos/gSzpo2wh-486405.mp4",
+            		plugins: {
+            			"hd-1": {
+            				file: "http://content.bitsontherun.com/videos/gSzpo2wh-486405.mp4"
+            			}
+            		},
+            		components: {
+            			controlbar: {
+            				position: "top"
+            			}
+            		}
+            	}
+            }, {
+            	name: "HD (with version and path)",
+            	config: {
+            		levels: [{
+            			file: "http://content.bitsontherun.com/videos/gSzpo2wh-486405.mp4"
+            		}, {
+            			file: "http://content.bitsontherun.com/videos/gSzpo2wh-604476.ogv"
+            		}],
+            		image: "http://content.bitsontherun.com/thumbs/gSzpo2wh-480.jpg",
+            		plugins: "http://plugins.longtailvideo.com/5/hd/hd-1.swf",
+            		"hd.file": "http://content.bitsontherun.com/videos/gSzpo2wh-486405.mp4",
+            		components: {
+            			controlbar: {
+            				position: "top"
+            			}
+            		}
+            	}
+            }, {
+            	name: "HD with JSON config (CDN, no version)",
+            	config: {
+            		levels: [{
+            			file: "http://content.bitsontherun.com/videos/gSzpo2wh-486405.mp4"
+            		}, {
+            			file: "http://content.bitsontherun.com/videos/gSzpo2wh-604476.ogv"
+            		}],
+            		image: "http://content.bitsontherun.com/thumbs/gSzpo2wh-480.jpg",
+            		plugins: {
+            			hd: {
+            				file: "http://content.bitsontherun.com/videos/gSzpo2wh-486405.mp4"
+            			}
+            		},
+            		components: {
+            			controlbar: {
+            				position: "top"
+            			}
+            		}
+            	}
+            }, {
+            	name: "HD  with JSON config (with version)",
+            	config: {
+            		levels: [{
+            			file: "http://content.bitsontherun.com/videos/gSzpo2wh-486405.mp4"
+            		}, {
+            			file: "http://content.bitsontherun.com/videos/gSzpo2wh-604476.ogv"
+            		}],
+            		image: "http://content.bitsontherun.com/thumbs/gSzpo2wh-480.jpg",
+            		plugins: {
+            			"hd-1": {
+            				file: "http://content.bitsontherun.com/videos/gSzpo2wh-486405.mp4"
+            			}
+            		},
+            		components: {
+            			controlbar: {
+            				position: "top"
+            			}
+            		}
+            	}
+            }, {
+            	name: "HD  with JSON config (with version and path)",
+            	config: {
+            		levels: [{
+            			file: "http://content.bitsontherun.com/videos/gSzpo2wh-486405.mp4"
+            		}, {
+            			file: "http://content.bitsontherun.com/videos/gSzpo2wh-604476.ogv"
+            		}],
+            		image: "http://content.bitsontherun.com/thumbs/gSzpo2wh-480.jpg",
+            		plugins: {
+            			"http://plugins.longtailvideo.com/5/hd/hd-1.swf": {
+            				file: "http://content.bitsontherun.com/videos/gSzpo2wh-486405.mp4"
+            			}
+            		},
+            		components: {
+            			controlbar: {
+            				position: "top"
+            			}
+            		}
+            	}
+            }];
+            
+            for (var test in tests) {
+            	var row = document.createElement("tr");
+            	examplestable.appendChild(row);
+            	var label = document.createElement("td");
+            	row.appendChild(label);
+            	var labelTag = document.createElement("h2");
+            	label.appendChild(labelTag);
+            	labelTag.innerHTML = tests[test].name;
+            	for (var player in players) {
+            		var column = document.createElement("td");
+            		row.appendChild(column);
+            		var div = document.createElement("div");
+            		column.appendChild(div);
+            		var playerName = ("player-" + tests[test].name + "-" + players[player].join("-")).replace(/[^A-Za-z0-9\-\_]/g, "").toLowerCase();
+            		div.id = playerName;
+            		div.height = 270;
+            		div.width = 480;
+            		var config = jwplayer.utils.extend({
+						name: playerName,
+            			players: settings.players(window.location.href, players[player])
+            		}, tests[test].config);
+					console.log(config);
+            		var setup = jwplayer(playerName).setup(config);
+            	}
+            }
         </script>
         <h3>HTML code</h3>
     </body>
